# MythCore

./: .hgignore  .travis.yml  CMakeLists.txt  README.md
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/icc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/compiler/xcode/: settings.cmake
cmake/macros/: CheckBuildDir.cmake  CheckPlatform.cmake  EnsureVersion.cmake  FindACE.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  FindReadline.cmake
cmake/platform/: cmake_uninstall.in.cmake  settings.cmake
cmake/platform/osx/: settings.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: ACE.cpp  ACE_crc32.cpp  ACE_crc_ccitt.cpp  ATM_Acceptor.cpp  ATM_Addr.cpp  ATM_Connector.cpp  ATM_QoS.cpp  ATM_Stream.cpp  Activation_Queue.cpp  Argv_Type_Converter.cpp  Asynch_IO.cpp  Asynch_Pseudo_Task.cpp  Atomic_Op.cpp  Barrier.cpp  Base_Thread_Adapter.cpp  Based_Pointer_Repository.cpp  Basic_Stats.cpp  Basic_Types.cpp  CDR_Base.cpp  CDR_Size.cpp  CDR_Stream.cpp  CMakeLists.txt  Capabilities.cpp  Cleanup.cpp  Codecs.cpp  Codeset_IBM1047.cpp  Codeset_Registry.cpp  Codeset_Registry_db.cpp  (+210 more)
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h  stdsoap2.cpp  stdsoap2.h
dep/zlib/: CMakeLists.txt  adler32.c  compress.c  crc32.c  deflate.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zutil.c
sql/: #1xxxx_myth_update_auth.sql  #1xxxx_myth_update_characters.sql  #1xxxx_myth_update_world.sql  Event Children Week.sql  UpdateSpellPpmRate.sql  wow_armory_path.sql
sql/SQL Custom/: #3203_Premium_accounts_auth.sql  #3203_Premium_accounts_world.sql  NPC - ADDR.sql  NPC - transfers.sql  NPC teleporteur.sql  VIP - World.sql  npc-transmogrification.sql  transmogrification-characters.sql  trinit_string_transmogification.sql
sql/base/: auth_database.sql  characters_database.sql
sql/old_update/: #1xxxx_myth_update_auth.sql  #1xxxx_myth_update_characters.sql  #1xxxx_myth_update_world_9885.sql  #1xxxx_myth_update_world_old_before_v42.sql  10445_myth_characters.sql
sql/personal_branch/: Battleage_fun_patch.sql  Spawn All Veins and Herbs.sql  Weekend Double XP Bonus Event.sql  battleage_fix.sql  custom_fix.sql  player_factionchange.sql  quests_fix.sql
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/pathfinding/: CMakeLists.txt
src/server/pathfinding/PrecompiledHeaders/: pathfindingPCH.cpp  pathfindingPCH.h
src/server/pathfinding/detour/: DetourAlloc.cpp  DetourAlloc.h  DetourAssert.h  DetourCommon.cpp  DetourCommon.h  DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshBuilder.cpp  DetourNavMeshBuilder.h  DetourNavMeshQuery.cpp  DetourNavMeshQuery.h  DetourNode.cpp  DetourNode.h  DetourObstacleAvoidance.cpp  DetourObstacleAvoidance.h
src/server/pathfinding/recast/: Recast.cpp  Recast.h  RecastAlloc.cpp  RecastAlloc.h  RecastArea.cpp  RecastAssert.h  RecastContour.cpp  RecastFilter.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp
(+1213 files in other folders)
